// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recalls preparer карточка: status === OK: вернет правильный объект "2 записи" 1`] = `
Object {
  "key": "2 отзывные кампании",
}
`;

exports[`recalls preparer карточка: status === OK: вернет правильный объект "нет данных" 1`] = `
Object {
  "key": "Отзывные кампании не найдены",
}
`;

exports[`recalls preparer отчет: status === OK: вернет правильный объект "2 записи" 1`] = `
Object {
  "key": "Отзывные кампании",
  "value": "2 записи",
}
`;

exports[`recalls preparer отчет: status === OK: вернет правильный объект "нет данных" 1`] = `
Object {
  "key": "Отзывные кампании",
  "value": "Нет записей",
}
`;
